Submit gatewayMAC when destination is not within own subnet. Calculate own subnet through VIP rather than IP. Fix spelling error with macAdress to macAddress